# autocleanse

./: .gitignore  README.md  autocleanse.py  main.py  pyproject.toml  requirements.txt
models/: titanic_model.pkl  titanic_scaler.pkl  training_columns.pkl
notebooks/: generate_random_data.ipynb  kaggle_submittion.ipynb  test_submission.csv  titanic_submission.csv  transformer_prototype.ipynb  visulaizer_prototype.ipynb
src/autocleanse/: autocleanse.py  cleaner.py  profiler.py  transformer.py  utils.py  visualizer.py
tests/: test_profiler.py
